continuation and item choice in burger app

--- a/Frontend_ordering/frontend_objects.html
+++ b/Frontend_ordering/frontend_objects.html
@@ -17,10 +17,44 @@
         </div>
         <div class ="ordering">
             <i calss= "fa-solid fa-bars"></i>
-            <i class= "fa-solid fa-xmark"></i>
+            <div class =  "choices">
+                <button class ="btn_Cheeseburger"> 
+                    Cheeseburger 
+                    <i class = "fa-solid"></i>
+                </button>
+
+                <button class ="btn_Chickenburger">
+                    Chickenburger
+                    <i class = "fa-solid"></i>
+                </button>
+
+                <button class ="btn_Bacon_Cheeseburger">
+                    Bacon Cheeseburger
+                    <i class = "fa-solid"></i>
+
+                </button>
+
+                <button class ="btn_Bacon_Chickenburger">
+                    Bacon Chickenburger
+                    <i class = "fa-solid"></i>
+                </button>
+
+                <button class ="btn_Dubble_Bacon_CheeseBurger">
+                    Dubble Bacon CheeseBurger
+                    <i class = "fa-solid"></i>
+                </button>
+
+                <button class ="btn_Dubble_Bacon_Chickenburger">
+                    Dubble Bacon Chickenburger
+                    <i class = "fa-solid"></i>
+                </button>
+                
+
+            </div>
         </div>
     </div>
 
     </header>
+    <script src="Frontend_operations.js"></script>
 </body>
 </html>
