--- a/Frontend_ordering/frontend_objects.html
+++ b/Frontend_ordering/frontend_objects.html
@@ -18,12 +18,13 @@
         <div class ="ordering">
             <i calss= "fa-solid fa-bars"></i>
             <div class =  "choices">
+                <a href="./cheeseburger.html">
                 <button class ="btn_Cheeseburger"> 
                     Cheeseburger 
                     <i class = "fa-solid"></i>
                 </button>
-
-                <button class ="btn_Chickenburger">
+                </a>
+                <button href ="btn_Chickenburger">
                     Chickenburger
                     <i class = "fa-solid"></i>
                 </button>
