--- a/Containers/BurgerOrderer/Frontend_ordering/cheeseburger.html
+++ b/Containers/BurgerOrderer/Frontend_ordering/cheeseburger.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="cheeseburger.html">CheeseBurger</a>
+    <input type="checkbox" name="cbx_extra_lök" id="">
 </body>
 </html>
