--- a/Containers/BurgerOrderer/frontend_objects.html
+++ b/Containers/BurgerOrderer/frontend_objects.html
@@ -10,13 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger ordering | Home</title>
 </head>
-<body>
+<body onload="onStart()">
     <header>
         <div class = "logo">
             <img src="./imeges/Loggo burger application.png" alt="">
         </div>
         <div class ="ordering">
-            <i calss= "fa-solid fa-bars"></i>
+            <i class= "fa-solid fa-bars"></i>
             <div class =  "choices">
                 <button class ="btn_Cheeseburger"> 
                     Cheeseburger 
@@ -47,7 +47,6 @@
             </div>
         </div>
     </div>
-
     </header>
     <script src="Frontend_operations.js"></script>
 </body>
