--- a/Containers/BurgerOrderer/frontend_objects.html
+++ b/Containers/BurgerOrderer/frontend_objects.html
@@ -13,10 +13,9 @@
 <body onload="onStart()">
     <header>
         <div class = "logo">
-            <img src="./imeges/Loggo burger application.png" alt="">
+            <img src="/images/Loggo burger application.png" alt="">
         </div>
         <div class ="ordering">
-            <i class= "fa-solid fa-bars"></i>
             <div class =  "choices">
                 <button class ="btn_Cheeseburger"> 
                     Cheeseburger 
