Fixed the button Aldin broke

--- a/Containers/BurgerOrderer/frontend_objects.html
+++ b/Containers/BurgerOrderer/frontend_objects.html
@@ -15,6 +15,11 @@
         <div class = "logo">
             <img src="/images/Loggo burger application.png" alt="">
         </div>
+        <div>
+            <a href="http://localhost:8080/checkout">
+                <button>Checkout</button>
+            </a>
+        </div>
         <div id="options">
         </div>
     </div>
