fixed some problems with ingredientsText

--- a/Containers/BurgerOrderer/frontend_objects.html
+++ b/Containers/BurgerOrderer/frontend_objects.html
@@ -17,6 +17,7 @@
         </div>
         <div id="options">
         </div>
+        <div id="ingredients"></div>
     </div>
     </header>
     <script src="Frontend_operations.js"></script>
