added a checkout.html
Made changes so the checkout button could be changed as it sends you to a seperate page so its later easier to change the burger, also added go back to start button and confirm button so it send to kitchenview

--- a/Containers/BurgerOrderer/frontend_objects.html
+++ b/Containers/BurgerOrderer/frontend_objects.html
@@ -15,10 +15,7 @@
         <div class = "logo">
             <img src="/images/Loggo burger application.png" alt="">
         </div>
-        <div>
-            <a href="http://localhost:8080/checkout">
-                <button>Checkout</button>
-            </a>
+        <div>  <!-- removed the button and added checkout.html instead that would send the user back-->
         </div>
         <div id="options">
         </div>
