--- a/Containers/BurgerOrderer/checkout.html
+++ b/Containers/BurgerOrderer/checkout.html
@@ -10,7 +10,7 @@
     <div id="orderSummary"></div>
     <button id="confirmButton">Confirm Order</button>
     <button onclick="goBackToStart()">Go Back to Start</button>
-
+    <script type="module" src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
         // Retrieve the order saved in localStorage so we can use it now at checkout page.
         let order = JSON.parse(localStorage.getItem('currentOrder'));
