--- a/Containers/BurgerOrderer/frontend_objects.html
+++ b/Containers/BurgerOrderer/frontend_objects.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger ordering | Home</title>
 </head>
-<body onload="onStart()">
+<body>
     <header>
         <div class = "logo">
             <img src="/images/Loggo burger application.png" alt="">
