checkout recives ingredients from server.js
made it so checkout recives ingredients list from server, by using a req param. This will make it easier to implement database, since only the server needs to communicate with database.

--- a/Containers/BurgerOrderer/checkout.html
+++ b/Containers/BurgerOrderer/checkout.html
@@ -23,6 +23,11 @@
             let orderItem = document.createElement('p');
             orderItem.textContent = item;
             orderSummaryDiv.appendChild(orderItem);
+
+            axios.get(`/checkout/ingredients/${item}`).then(
+                response => {
+                    console.log('Recived item: ', response.data.ingredients);
+                })
         });
 
         // Function to confirm the order
